# cuda-checker

./: CMakeLists.txt  README.md  main.cu  timer.cpp  timer.hpp
example/: benchmark.sh  plotbm.py
include/: argtools.hpp
src/: argtools.cpp  main.cu  timer.cpp
